# liskvork

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build.zig  build.zig.zon  build.zig.zon.nix  config.ini  env_debug.sh  env_release.sh  flake.nix  liskvork.nix  test_runner.zig
.builds/: alpine.yml  archlinux.yml  fedora.yml  mirror.yml  nix.yml  openbsd.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: CI.yml  Docker.yml  build.yml  format-check.yml  nix-build.yml  nix.yml
.woodpecker/: build.yaml  docker.yaml
doc/: liskvork.1.scd
docs/: client_protocol.txt
scripts/: gen_zon_nix.sh
src/: CPipe.hpp  GameState.hpp  Player.cpp  Player.hpp  args.zig  client.zig  command.zig  concept.hpp  config.zig  default_config.ini  game.zig  liskvork.cpp  liskvork.hpp  main.cpp  main.zig  message.zig  options.hpp  protocol.zig  replay.zig  server.zig  utils.zig  web.zig
src/configuration/: ConfigHandler.hpp  Value.cpp
src/html/: index.html
src/logging/: Registry.cpp  Sinks.hpp  logging.hpp
test/: test.cpp
